# vexor

./: .gitignore  AGENTS.md  LICENSE  README.md  glama.json  pyproject.toml  requirements.txt  server.json  vexor.spec
.claude/: skills.md
.claude-plugin/: marketplace.json
.github/workflows/: conventional-commits.yml  publish.yml
docs/: TODO-head-mode.md  cli.md  configuration.md  development.md  mcp.md  remote-rerank.md  roadmap.md  workflow-diagram.md
docs/api/: python.md
gui/: README.md  forge.config.js  index.html  package-lock.json  package.json  vite.config.js
gui/electron/: dev-runner.cjs  main.js  preload.js
gui/src/: App.vue  styles.css
plugins/vexor/: README.md
scripts/: bump_version.py  eval_hybrid.py  eval_queries.jsonl
skill/vexor-cli/: SKILL.md
tests/integration/: test_cli.py  test_cli_commands.py  test_end_to_end.py
tests/unit/: test_api.py  test_bm25.py  test_bump_version_script.py  test_cache.py  test_cache_service.py  test_cache_upgrade_and_lines.py  test_cli_helpers.py  test_config.py  test_content_extract_service.py  test_entrypoints.py  test_index_service.py  test_init_service.py  test_init_service_extra.py  test_js_parser.py  test_main.py  test_mcp_service.py  test_modes.py  test_modes_misc.py  test_output.py  test_plugin_manifest.py  test_provider_backends_extra.py  test_provider_capabilities.py  test_query_cache.py  test_search.py  test_search_backend.py  test_search_service.py  test_search_service_extra.py  test_skill_service.py  test_system_service.py  test_text.py  test_utils.py
vexor/: __init__.py  __main__.py  api.py  bm25.py  cache.py  cli.py  config.py  modes.py  output.py  search.py  text.py  utils.py
vexor/providers/: __init__.py  capabilities.py  gemini.py  local.py  openai.py
vexor/services/: __init__.py  cache_service.py  config_service.py  index_service.py  (+8 more)
(+2 files in other folders)
