
[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vexor"
description = "A vector-powered CLI for semantic search over files."
readme = "README.md"
authors = [{ name = "scarletkc" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["semantic-search", "cli", "typer", "ai", "vector", "file"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "google-genai>=0.5.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.23.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "charset-normalizer>=3.3.0",
    "pypdf>=4.0.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
]
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "build>=1.2.1",
    "twine>=5.1.1",
]

[project.urls]
Repository = "https://github.com/scarletkc/vexor"

[project.scripts]
vexor = "vexor.cli:run"

[tool.hatch.version]
path = "vexor/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "vexor",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["vexor"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
